--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,5 +8,10 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["package.json", "electron", "src"]
+  "include": ["package.json", "electron"],
+  "references": [
+    { "path": "./libs/timer" },
+    { "path": "./libs/util" },
+    { "path": "./libs/persistence" }
+  ]
 }
